tests/NormalTests/paczka1/small_fuzzy/60683384.err
Error in line 6: kHihBBYP4m S99 36,3
Error in line 7: kHihBBYP4m S870 84,5
